k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gym-management
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: gym-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-backend
  namespace: gym-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym-backend
  template:
    metadata:
      labels:
        app: gym-backend
    spec:
      containers:
        - name: backend
          image: localhost/gym-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: apiport
          readinessProbe:
            httpGet:
              path: /api/auth/validate
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/auth/validate
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
