k8s/debezium.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-debezium
  namespace: gym-management
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: gym-debezium
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-debezium
  namespace: gym-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym-debezium
  template:
    metadata:
      labels:
        app: gym-debezium
    spec:
      containers:
        - name: debezium
          image: debezium/connect:2.4
          ports:
            - containerPort: 8083
              name: connectport
