k8s/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-elasticsearch
  namespace: gym-management
spec:
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    app: gym-elasticsearch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gym-elasticsearch
  namespace: gym-management
spec:
  serviceName: gym-elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: gym-elasticsearch
  template:
    metadata:
      labels:
        app: gym-elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10
          ports:
            - containerPort: 9200
              name: esport
          volumeMounts:
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: es-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
