k8s/kafka-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-zookeeper
  namespace: gym-management
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: gym-zookeeper
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gym-zookeeper
  namespace: gym-management
spec:
  serviceName: gym-zookeeper
  replicas: 1
  selector:
    matchLabels:
      app: gym-zookeeper
  template:
    metadata:
      labels:
        app: gym-zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.3.0
          ports:
            - containerPort: 2181
              name: client
---
apiVersion: v1
kind: Service
metadata:
  name: gym-kafka
  namespace: gym-management
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: gym-kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gym-kafka
  namespace: gym-management
spec:
  serviceName: gym-kafka
  replicas: 1
  selector:
    matchLabels:
      app: gym-kafka
  template:
    metadata:
      labels:
        app: gym-kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.3.0
          ports:
            - containerPort: 9092
              name: broker
