k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-postgres
  namespace: gym-management
  labels:
    app: gym-postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: gym-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gym-postgres
  namespace: gym-management
spec:
  serviceName: gym-postgres
  replicas: 1
  selector:
    matchLabels:
      app: gym-postgres
  template:
    metadata:
      labels:
        app: gym-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          args: ["postgres", "-c", "wal_level=logical", "-c", "max_wal_senders=4", "-c", "max_replication_slots=4"]
          ports:
            - containerPort: 5432
              name: dbport
          volumeMounts:
            - name: postgres-db-vol
              mountPath: /var/lib/postgresql/data
            - name: schema-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: schema-sql
          configMap:
            name: postgres-init-sql
  volumeClaimTemplates:
    - metadata:
        name: postgres-db-vol
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
